# pipes

./: .travis.yml  Cargo.toml  README.md
examples/: benchmark.rs  example.rs
src/: compose.rs  composed.rs  iter.rs  lib.rs  slice.rs  tests.rs  tuples.rs  util.rs
